--- a/src/Style.css
+++ b/src/Style.css
@@ -2,123 +2,82 @@
 *::after,
 *::before {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 html {
-  --font: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-    Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  --font-title: Georgia, 'Times New Roman', Times, serif;
-  --font-size: 1.2rem;
-  --color: #aa87ff;
-  --color-light: #edf;
-  --color-dark: #206;
-  --radius: 0.25rem;
+
+  --color-1:#463220;
+  --color-2: #66593c;
+  --color-3: #eceadd;
+  --color-4: #f7f8f5;
+  --color-5: #ffffff;
+  --gap-s: 0.625rem;
+  --gap: 1.25rem;
 }
 
 body {
-  margin: 1.5rem;
+font-family: sans-serif;
+margin: 0;
+color: var(--color-2);
+background: var(--color-4);
 }
 
-body,
-input,
-textarea,
-button {
-  font-size: var(--font-size);
-  font-family: var(--font);
-}
-
-h1,
-h2,
-h3 {
-  font-family: var(--font-title);
-}
-
-h1,
-h2,
-h3,
-p,
-ul {
-  margin: 1rem 0;
-}
-
-ul {
-  list-style: square;
-}
-
-li {
-  margin-bottom: 0.5rem;
-}
-
-label {
-  display: block;
-  margin-bottom: 0.25rem;
-}
-
-input,
-textarea {
-  display: block;
-  border: 1px solid #ccc;
-  width: 100%;
-  padding: 0.75rem;
-  border-radius: var(--radius);
-  background: #eee;
-  transition: 0.2s;
-}
-
-input[type='checkbox'] {
-  display: inline-block;
-  width: auto;
-  margin: 0 0.5rem 0 0;
-}
-
-input:focus,
-textarea:focus {
-  outline: none;
-  border-color: var(--color);
-  background: white;
-  box-shadow: 0 0 0 3px var(--color-light);
-}
-
-button {
-  display: block;
+button{
+  font-family: sans-serif;
+  font-size: 1rem;
   cursor: pointer;
-  border: none;
-  border-radius: var(--radius);
-  transition: 0.1s;
-  background: var(--color);
-  color: var(--color-dark);
-  padding: 0.75em 1.5em;
-  margin-bottom: 1rem;
 }
 
-button:hover,
-button:focus {
-  background: var(--color);
-  box-shadow: 0 0 0 3px var(--color-light), 0 0 0 4px var(--color);
-  outline: none;
+h1,h2,h3{
+  font-weight: 600;
+  margin: 0;
 }
 
-button:active {
-  box-shadow: 0 0 0 3px var(--color), 0 0 0 4px var(--color);
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-button:disabled {
-  opacity: 0.5;
-  cursor: wait;
-}
-
-hr {
-  border: 2px solid #eee;
-  margin: 2rem auto;
-}
-
-video,
-img {
-  max-width: 100%;
-  display: block;
+.box {
+  padding: var(--gap);
+  border-radius: var(--gap);
+  background: var(--color-5);
 }
 
 .flex {
   display: flex;
-  gap: 1rem;
+  gap: var(--gap);
+}
+
+.flex > * {
+  flex: 1;
+}
+
+.mb{
+  margin-bottom: var(--gap);
+}
+
+.bg-1{
+  background: var(--color-1);
+}
+.bg-2{
+  background: var(--color-2);
+}
+.bg-3{
+  background: var(--color-3);
+}
+.bg-4{
+  background: var(--color-4);
+}
+.bg-5{
+  background: var(--color-5);
+}
+
+.container{
+  display: grid;
+  padding: var(--gap);
+  gap: var(--gap);
 }
