adding styling to the sidenav

--- a/src/Style.css
+++ b/src/Style.css
@@ -80,6 +80,35 @@ ul {
   display: grid;
   padding: var(--gap);
   gap: var(--gap);
+  grid-template-columns: 240px auto ;
+}
+
+.sidenav li{
+  display: flex;
+  align-items: center;
+  gap: var(--gap-s);
+}
+
+.sidenav li span{
+  width: 2rem;
+  height: 2rem;
+  background-color: var(--color-4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: var(--gap);
+}
+
+.sidenav li a{
+  flex: 1;
+  font-size: 1.125rem;
+  text-decoration: none;
+  color: var(--color-1);
+  padding: var(--gap-s) 0;
+}
+
+.sidenav li:hover span{
+  background-color: var(--color-3);
 }
 
 .resumo{
