--- a/src/Style.css
+++ b/src/Style.css
@@ -111,7 +111,7 @@ ul {
   background-color: var(--color-3);
 }
 
-.daterane{
+.daterange{
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: var(--gap);
