--- a/src/Style.css
+++ b/src/Style.css
@@ -7,7 +7,6 @@
 }
 
 html {
-
   --color-1:#463220;
   --color-2: #66593c;
   --color-3: #eceadd;
@@ -103,6 +102,7 @@ ul {
   flex: 1;
   font-size: 1.125rem;
   text-decoration: none;
+  margin: .25rem 0;
   color: var(--color-1);
   padding: var(--gap-s) 0;
 }
