--- a/src/Style.css
+++ b/src/Style.css
@@ -7,9 +7,9 @@
 }
 
 html {
-  --color-1:#463220;
-  --color-2: #66593c;
-  --color-3: #eceadd;
+  --color-1:#000000;
+  --color-2: #111111;
+  --color-3: #a36af9;
   --color-4: #f7f8f5;
   --color-5: #ffffff;
   --gap-s: 0.625rem;
@@ -44,6 +44,7 @@ ul {
   padding: var(--gap);
   border-radius: var(--gap);
   background: var(--color-5);
+  outline: 2px solid var(--color-1);
 }
 
 .flex {
@@ -143,4 +144,42 @@ ul {
 .venda a{
   text-decoration: none;
   color: inherit;
+}
+
+@media(max-width: 1000px){
+  .resumo{
+    flex-direction: column;
+  }
+  .daterange{
+    grid-template-columns: 1fr;
+  }	
+  .daterange *:last-child{
+    grid-row: 1;
+  }
+}
+
+@media(max-width: 700px){
+  html{
+    --gap-s: 0.5rem;
+    --gap: 0.75rem;
+  }
+  .container{
+    grid-template-columns: 1fr;
+  }
+  .flex{
+    flex-direction: column;
+  }
+  .sidenav ul{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .sidenav li a{
+    font-size: 0.875rem;
+  }
+  .venda{
+    grid-template-columns: 1fr;
+  }
+  .venda div:last-child{
+    justify-self: start;
+  }
 }
